style(updates-extract-overview): added correct spacing

--- a/components/update-overview/update-overview.less
+++ b/components/update-overview/update-overview.less
@@ -6,6 +6,8 @@
 	display: flex;	
 	justify-content: center;
 	flex-direction: column;
+	padding-bottom: @spacing-large*2;
+	margin-bottom: 0px;
 	
 	.update-extract-small {
 		width: 100%;
